fix: Accounts Details:  calendar icon vertical align

--- a/styles/project/components/_icons.scss
+++ b/styles/project/components/_icons.scss
@@ -14,6 +14,12 @@
   width: 30px;
   height: 30px;
   background-size: 30px 30px;
+
+  &--small {
+    width: 20px;
+    height: 20px;
+    background-size: 20px 20px;
+  }
 }
 
 .icon-folder-plus {
@@ -29,21 +35,15 @@
   vertical-align: middle;
 
   @media (min-width: $screen-xs-max) {
-    height: 32px;
     width: 36px;
+    height: 32px;
     background-size: 32px 32px;
   }
 
   @media (max-width: $screen-xs-max) {
-    height: 24px;
     width: 27px;
-    background-size: 22px 22px;
-  }
-
-  &--small {
     height: 24px;
-    width: 20px;
-    background-size: 20px 20px;
+    background-size: 22px 22px;
   }
 }
 
